# NeuroSymbolic

./: .gitignore  Gemini.md  README.md  api.py  calibration.yaml  find_stable_frame.py  generate_flow_diagram.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  traffic_alerts.csv  vehicle_trajectories.csv
.devcontainer/: devcontainer.json
frontend/: app.js  calibration.html  index.html  styles.css  zone.html
notebooks/: 1_physics_testing.ipynb  2_vlm_prompting.ipynb  3_graphrag_testing.ipynb  test_som.py
src/: __init__.py  utils.py
src/agentic_orchestrator/: hierarchical_router.py  langgraph_state.py  sequential_pipeline.py  tools.py
src/evaluation/: __init__.py  metrics.py
src/memory_layer/: duckdb_client.py  graph_client.py  milvus_client.py
src/physics_engine/: calibration_router.py  detector.py  homography.py  kinematics.py  tracker.py  zone_manager.py  zone_router.py
src/semantic_abstractor/: entity_extractor.py  set_of_mark.py  vlm_inference.py
src/symbolic_engine/: alert_engine.py  rule_engine.py
tests/: __init__.py  conftest.py  test_alert_engine.py  test_databases.py  test_kinematics.py  test_router.py  test_rule_engine.py  test_vlm_parsing.py
